--- a/android/JoynMeSwipeTileActivity/assets/www/src/tile/tile.css
+++ b/android/JoynMeSwipeTileActivity/assets/www/src/tile/tile.css
@@ -37,5 +37,11 @@ li {
 
     
     .tileContainer{
-      width: 320px;
+      /*width: 320px;*/
+	  overflow:hidden;
     }
+	
+	#t1 {
+	position:absolute;
+left:100px;
+	}
