--- a/android/JoynMeSwipeTileActivity/assets/www/src/tile/tile.css
+++ b/android/JoynMeSwipeTileActivity/assets/www/src/tile/tile.css
@@ -6,8 +6,9 @@
       text-decoration: none;
       text-align: left;
       color: #000;
-      margin: 10px;
-      width: 140px;
+      margin: 8px;
+      margin-bottom: 0px;
+      width: 142px;
       height: 140px;
       background: #55be8c;
       display: block;
