resized tiles in panels 0,2,3 so they're big tiles

--- a/android/JoynMeSwipeTileActivity/assets/www/src/tile/tile.css
+++ b/android/JoynMeSwipeTileActivity/assets/www/src/tile/tile.css
@@ -41,7 +41,14 @@
       border-color: #333;
       background: #ccc;
     }
-
+	
+	li.huge{
+		width: 300px;
+	}
+	
+	li.hidden{
+		display: none;
+	}
     
     .tileContainer{
      
