glowing is starting to work

--- a/android/JoynMeSwipeTileActivity/assets/www/src/tile/tile.css
+++ b/android/JoynMeSwipeTileActivity/assets/www/src/tile/tile.css
@@ -28,6 +28,7 @@
       margin-bottom: 0px;
       width: 142px;
       height: 140px;
+      height: 140px;
       background: #55be8c;
       display: block;
       float: left; */
